# Task_5

./: .coverage  pyproject.toml
tests/: test_dicts.py
utils/: dicts.py
