[tool.poetry]
name = "task-5"
version = "0.1.0"
description = ""
authors = ["timofey khlystov <tima.khlystov99@mail.ru>"]
readme = "README.md"
packages = [{include = "task_5"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
